Add HTML structure for 4KT Shadow Hunters team

--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>4KT Shadow Hunters</title>
+  <link rel="stylesheet" href="../assets/style.css">
+</head>
+<body>
 
+<div class="container">
+  <h1 class="gold">4KT Shadow Hunters</h1>
+  <h2>Team Tag: 4零丨</h2>
+
+  <div class="section">
+    <h2>Roster</h2>
+    <div class="card-grid">
+      <div class="card">🇳🇬 4零丨Mazi</div>
+      <div class="card">🇨🇦 4零丨Choco</div>
+      <div class="card">🇳🇬 4零丨Virus</div>
+      <div class="card">🇬🇭 4零丨Melly</div>
+      <div class="card">🇬🇭 4零丨Flowstate</div>
+      <div class="card">🇺🇬 4零丨Beetle</div>
+      <div class="card">🇳🇬 4零丨Sage</div>
+    </div>
+  </div>
+
+  <a class="btn" href="../clans/4kt.html">Back to 4KT</a>
+</div>
+
+</body>
+</html>
