Update player roles and section titles in HTML

--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -67,7 +67,6 @@
             <h2 class="section-title">ELITE CODM TEAM</h2>
             <div class="content-card">
                 <p>The Shadow Hunters are Blood Esports' premier Call of Duty Mobile team. Known for their tactical precision and flawless teamwork, they dominate both ranked and tournament play across Africa and beyond.</p>
-                <p>Specializing in Search & Destroy and strategic gameplay, they've earned their reputation as one of the most feared teams in competitive CODM.</p>
             </div>
         </section>
         
@@ -79,7 +78,7 @@
                 <div class="player-card">
                     <div class="player-flag">🇳🇬</div>
                     <div class="player-name">4零丨Mazi</div>
-                    <div class="player-role">Captain & IGL</div>
+                    <div class="player-role">wildcard</div>
                     <div class="player-stats">
                         <div class="player-stat">
                             <span class="stat-value">4.8</span>
@@ -96,7 +95,7 @@
                 <div class="player-card">
                     <div class="player-flag">🇨🇦</div>
                     <div class="player-name">4零丨Choco</div>
-                    <div class="player-role">Clan Master & Flex</div>
+                    <div class="player-role">Clan Master & Tactician</div>
                     <div class="player-stats">
                         <div class="player-stat">
                             <span class="stat-value">5.2</span>
@@ -147,7 +146,7 @@
                 <div class="player-card">
                     <div class="player-flag">🇬🇭</div>
                     <div class="player-name">4零丨Flowstate</div>
-                    <div class="player-role">SMG Specialist</div>
+                    <div class="player-role">Support</div>
                     <div class="player-stats">
                         <div class="player-stat">
                             <span class="stat-value">4.7</span>
@@ -164,7 +163,7 @@
                 <div class="player-card">
                     <div class="player-flag">🇺🇬</div>
                     <div class="player-name">4零丨Beetle</div>
-                    <div class="player-role">Objective Player</div>
+                    <div class="player-role">IGL</div>
                     <div class="player-stats">
                         <div class="player-stat">
                             <span class="stat-value">4.2</span>
@@ -198,7 +197,7 @@
         
         <!-- Team Achievements -->
         <section class="section-luxury">
-            <h2 class="section-title">RECENT ACHIEVEMENTS</h2>
+            <h2 class="section-title">CLAN ACHIEVEMENTS</h2>
             <div class="achievements">
                 <div class="achievement">
                     <div class="achievement-icon">
