Update social links in footer section

--- a/index.html
+++ b/index.html
@@ -1070,10 +1070,15 @@
             <div class="footer-logo">BLOOD ESPORTS</div>
             
             <div class="social-links">
-                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
-                <a href="https://discord.gg/99uuMvMBX" target="_blank" class="social-icon"><i class="fab fa-discord"></i></a>
+                <a href="https://www.tiktok.com/@4ktreybloods?_r=1&_t=ZS-93BnKc5MsBp" target="_blank" class="social-icon">
+                    <i class="fab fa-tiktok"></i>
+                </a>
+                <a href="#" class="social-icon">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://discord.gg/99uuMvMBX" target="_blank" class="social-icon">
+                    <i class="fab fa-discord"></i>
+                </a>
             </div>
             
             <div class="footer-divider"></div>
