--- a/index.html
+++ b/index.html
@@ -884,6 +884,9 @@
                         <a href="teams/4kt-ladybugs.html" class="dropdown-item">
                             <i class="fas fa-heart"></i> Ladybugs
                         </a>
+                        <a href="teams/4kt-syndicate.html" class="dropdown-item">
+                            <i class="fas fa-gamepad"></i> 4KT Syndicate
+                        </a>
                         <div class="dropdown-header" style="padding: 0.5rem 2rem; color: var(--gold); font-weight: 600; font-size: 0.9rem; margin-top: 0.5rem;">OTF CLAN</div>
                         <a href="teams/otf-bloodhounds.html" class="dropdown-item">
                             <i class="fas fa-dog"></i> Blood Hounds
@@ -929,7 +932,7 @@
                     <div class="stat-label">TOURNAMENT WINS</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">4</div>
+                    <div class="stat-number">5</div>
                     <div class="stat-label">COMPETITIVE TEAMS</div>
                 </div>
                 <div class="stat-card">
@@ -976,6 +979,16 @@
                 <h3 class="team-name">LADYBUGS</h3>
                 <div class="team-tag">4零丨</div>
                 <p class="team-desc">Elite female competitors proving skill knows no gender.</p>
+            </div>
+            
+            <div class="elite-team-card">
+                <div class="team-icon">
+                    <i class="fas fa-gamepad"></i>
+                </div>
+                <div class="team-status" style="background: linear-gradient(45deg, #9B30FF, #8A2BE2); color: white;">MP SPECIALISTS</div>
+                <h3 class="team-name">4KT SYNDICATE</h3>
+                <div class="team-tag">4零丨</div>
+                <p class="team-desc">Multiplayer domination experts. Masters of fast-paced action and clutch gameplay.</p>
             </div>
             
             <div class="elite-team-card">
