--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -21,7 +21,7 @@
                 <div class="logo-display">
                     <span class="logo-gold">BLOOD</span>
                     <span class="logo-red">ESPORTS</span>
-                    <div class="logo-badge">CODM</div>
+                    <div class="logo-badge">SHADOW HUNTERS</div>
                 </div>
             </div>
             <div class="nav-center">
