--- a/index.html
+++ b/index.html
@@ -893,6 +893,10 @@
                         </a>
                     </div>
                 </div>
+                <!-- EVENTS LINK ADDED HERE -->
+                <a href="events.html" class="nav-link">
+                    <i class="fas fa-calendar-alt"></i> EVENTS
+                </a>
             </div>
         </div>
     </nav>
