--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             color: white;
             font-family: 'Montserrat', sans-serif;
             overflow-x: hidden;
-            padding-bottom: 70px; /* Space for mobile nav */
+            padding-bottom: 70px;
         }
 
         /* LIVE TICKER */
@@ -38,28 +38,14 @@
 
         .ticker-content { display: inline-block; animation: ticker 30s linear infinite; }
         .ticker-item { margin-right: 60px; font-weight: bold; text-transform: uppercase; }
-        .live-dot {
-            height: 10px; width: 10px; background: var(--red);
-            border-radius: 50%; display: inline-block; margin-right: 8px;
-            box-shadow: 0 0 10px var(--red); animation: blink 1s infinite;
-        }
+        .live-dot { height: 10px; width: 10px; background: var(--red); border-radius: 50%; display: inline-block; margin-right: 8px; box-shadow: 0 0 10px var(--red); animation: blink 1s infinite; }
 
         @keyframes ticker { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
         @keyframes blink { 50% { opacity: 0; } }
 
-        /* DESKTOP NAVIGATION */
-        .luxury-nav {
-            background: var(--black);
-            border-bottom: 2px solid var(--gold);
-            padding: 1rem 2rem;
-            position: sticky; top: 0; z-index: 1000;
-        }
-
-        .nav-container {
-            max-width: 1400px; margin: 0 auto;
-            display: flex; justify-content: space-between; align-items: center;
-        }
-
+        /* NAVIGATION */
+        .luxury-nav { background: var(--black); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; position: sticky; top: 0; z-index: 1000; }
+        .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
         .nav-brand { display: flex; align-items: center; gap: 12px; text-decoration: none; }
         .nav-logo-small { height: 40px; width: auto; }
         .nav-title { font-family: 'Orbitron'; font-weight: 900; font-size: 1.1rem; letter-spacing: 1px; }
@@ -68,91 +54,39 @@
         .desktop-links a { color: white; text-decoration: none; font-weight: 700; font-family: 'Orbitron'; font-size: 0.8rem; transition: 0.3s; }
         .desktop-links a:hover { color: var(--gold); }
 
-        /* MOBILE BOTTOM NAVIGATION (Better for Phones) */
-        .mobile-nav {
-            display: none;
-            position: fixed; bottom: 0; left: 0; width: 100%;
-            background: #0a0a0a; border-top: 2px solid var(--gold);
-            padding: 12px 0; z-index: 2000;
-            justify-content: space-around; align-items: center;
-        }
-
-        .mobile-nav a { color: white; text-decoration: none; text-align: center; font-size: 0.65rem; font-family: 'Orbitron'; font-weight: 700; }
-        .mobile-nav i { display: block; font-size: 1.2rem; color: var(--gold); margin-bottom: 4px; }
-
         /* HERO SECTION */
         .hero { padding: 3rem 1.5rem; text-align: center; max-width: 1100px; margin: 0 auto; }
         .main-logo { width: 220px; height: auto; margin-bottom: 1.5rem; filter: drop-shadow(0 0 15px rgba(255, 215, 0, 0.3)); }
-
-        .hero-title {
-            font-family: 'Orbitron'; font-size: clamp(2rem, 8vw, 4.5rem); font-weight: 900;
-            margin-bottom: 1rem; line-height: 1.1;
-        }
-
+        .hero-title { font-family: 'Orbitron'; font-size: clamp(2rem, 8vw, 4.5rem); font-weight: 900; margin-bottom: 1rem; line-height: 1.1; }
         .text-gold { color: var(--gold); text-shadow: 0 0 20px rgba(255, 215, 0, 0.4); }
         .text-red { color: var(--red); text-shadow: 0 0 20px rgba(255, 0, 0, 0.4); }
+        .hero-subtitle { font-size: clamp(0.8rem, 3vw, 1.3rem); font-style: italic; color: #888; margin-bottom: 2rem; font-family: 'Orbitron'; }
 
-        .hero-subtitle {
-            font-size: clamp(0.8rem, 3vw, 1.3rem); font-style: italic; color: #888;
-            margin-bottom: 2.5rem; font-family: 'Orbitron';
-        }
+        /* SOCIAL ICONS HERO */
+        .hero-socials { display: flex; justify-content: center; gap: 20px; margin-bottom: 3rem; }
+        .hero-socials a { color: white; font-size: 2rem; transition: 0.3s; }
+        .hero-socials a:hover { color: var(--gold); transform: scale(1.2); filter: drop-shadow(0 0 10px var(--gold)); }
 
-        .btn-primary {
-            background: var(--gold); color: black; padding: 16px 35px; 
-            text-decoration: none; font-weight: 900; display: inline-block;
-            font-family: 'Orbitron'; text-transform: uppercase; border: 2px solid var(--gold);
-            transition: 0.3s; font-size: 0.9rem;
-        }
+        /* RECRUITMENT BOX */
+        .recruitment-section { background: linear-gradient(90deg, #111, #000); border: 2px solid var(--gold); padding: 3rem; margin: 4rem auto; border-radius: 15px; text-align: center; max-width: 900px; }
+        .recruitment-section h2 { font-family: 'Orbitron'; color: var(--gold); margin-bottom: 15px; }
+        .btn-apply { background: var(--gold); color: black; padding: 15px 40px; text-decoration: none; font-weight: 900; font-family: 'Orbitron'; display: inline-block; margin-top: 20px; transition: 0.3s; border: 2px solid var(--gold); }
+        .btn-apply:hover { background: transparent; color: var(--gold); box-shadow: 0 0 15px var(--gold); }
 
-        .btn-primary:hover { background: transparent; color: var(--gold); box-shadow: 0 0 20px var(--gold); }
-
-        /* TEAM SECTION */
-        .elite-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 15px;
-            padding-bottom: 4rem;
-        }
-
-        .team-card {
-            background: #0a0a0a; border: 1px solid #222; padding: 2.5rem 1.5rem;
-            text-align: center; border-radius: 10px; position: relative; transition: 0.4s;
-        }
-
+        /* TEAM GRID */
+        .elite-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 15px; padding-bottom: 4rem; }
+        .team-card { background: #0a0a0a; border: 1px solid #222; padding: 2.5rem 1.5rem; text-align: center; border-radius: 10px; position: relative; transition: 0.4s; }
         .team-card:hover { border-color: var(--gold); transform: translateY(-8px); }
         .tier-badge { position: absolute; top: 15px; left: 50%; transform: translateX(-50%); font-size: 0.6rem; padding: 4px 10px; border-radius: 20px; font-weight: 900; font-family: 'Orbitron'; }
-
         .gold-bg { background: var(--gold); color: black; }
         .red-bg { background: var(--red); color: white; }
-        .pink-bg { background: #FF69B4; color: white; }
-        .purple-bg { background: #8A2BE2; color: white; }
 
-        .team-icon { font-size: 2.2rem; color: var(--gold); margin: 1rem 0; }
-        .team-name { font-family: 'Orbitron'; font-size: 1.2rem; margin-bottom: 5px; }
-        .team-tag { color: var(--gold); font-weight: bold; font-size: 0.8rem; margin-bottom: 10px; }
-        .team-desc { font-size: 0.8rem; color: #777; line-height: 1.4; }
+        /* MOBILE NAV */
+        .mobile-nav { display: none; position: fixed; bottom: 0; left: 0; width: 100%; background: #0a0a0a; border-top: 2px solid var(--gold); padding: 12px 0; z-index: 2000; justify-content: space-around; align-items: center; }
+        .mobile-nav a { color: white; text-decoration: none; text-align: center; font-size: 0.65rem; font-family: 'Orbitron'; font-weight: 700; }
+        .mobile-nav i { display: block; font-size: 1.2rem; color: var(--gold); margin-bottom: 4px; }
 
-        /* FOOTER / COPYRIGHT */
-        .footer {
-            text-align: center;
-            padding: 3rem 1.5rem;
-            border-top: 1px solid #222;
-            background: #050505;
-        }
-
-        .footer-text { font-family: 'Orbitron'; font-size: 0.7rem; color: #555; letter-spacing: 2px; text-transform: uppercase; }
-
-        /* RESPONSIVE LOGIC */
-        @media (max-width: 850px) {
-            .desktop-links { display: none; }
-            .mobile-nav { display: flex; }
-        }
-
-        @media (max-width: 480px) {
-            .main-logo { width: 180px; }
-            .hero-title { font-size: 2.2rem; }
-            .hero { padding: 2rem 1rem; }
-        }
+        @media (max-width: 850px) { .desktop-links { display: none; } .mobile-nav { display: flex; } }
     </style>
 </head>
 <body>
@@ -174,7 +108,7 @@
                 </div>
             </div>
             <div class="desktop-links">
-                <a href="index.html">HOME</a>
+                <a href="#about">ABOUT</a>
                 <a href="clans/4kt.html">4KT</a>
                 <a href="clans/otf.html">OTF</a>
                 <a href="events.html">EVENTS</a>
@@ -183,7 +117,7 @@
     </nav>
 
     <div class="mobile-nav">
-        <a href="index.html"><i class="fas fa-home"></i>HOME</a>
+        <a href="#about"><i class="fas fa-info-circle"></i>ABOUT</a>
         <a href="clans/4kt.html"><i class="fas fa-crown"></i>4KT</a>
         <a href="clans/otf.html"><i class="fas fa-users"></i>OTF</a>
         <a href="events.html"><i class="fas fa-calendar-alt"></i>EVENTS</a>
@@ -195,47 +129,50 @@
             <span class="text-gold">BLOOD</span> <span class="text-red">ESPORTS</span>
         </h1>
         <p class="hero-subtitle">"IT'S A PARADE INSIDE MY CITY YEAHHH"</p>
-        
-        <a href="https://discord.gg/99uuMvMBX" class="btn-primary">ENTER THE KINGDOM</a>
 
-        <div style="text-align: center; margin: 4rem 0 2.5rem;">
+        <div class="hero-socials">
+            <a href="https://discord.gg/99uuMvMBX" target="_blank"><i class="fab fa-discord"></i></a>
+            <a href="https://www.tiktok.com/@4ktreybloods" target="_blank"><i class="fab fa-tiktok"></i></a>
+        </div>
+
+        <div id="about" style="text-align: center; margin: 4rem 0 2rem;">
+            <h2 style="font-family: 'Orbitron'; font-size: 1.5rem; color: var(--gold); letter-spacing: 2px;">ABOUT BLOOD ESPORTS</h2>
+            <p style="color: #888; max-width: 700px; margin: 15px auto; line-height: 1.6;">
+                Founded in 2022, Blood Esports is a premier CODM organization dedicated to competitive excellence and community growth. 
+                We dominate Tier 1 competition through our 4KT division while nurturing the next generation of talent in OTF.
+            </p>
+        </div>
+
+        <div style="text-align: center; margin-bottom: 2.5rem;">
             <h2 style="font-family: 'Orbitron'; font-size: 1.5rem; color: var(--gold); letter-spacing: 2px;">COMPETITIVE EXCELLENCE</h2>
         </div>
 
         <div class="elite-grid">
             <div class="team-card">
                 <div class="tier-badge gold-bg">TIER 1</div>
-                <i class="fas fa-crosshairs team-icon"></i>
+                <i class="fas fa-crosshairs" style="font-size:2.2rem; color:var(--gold); margin:1rem 0;"></i>
                 <h3 class="team-name">SHADOW HUNTERS</h3>
                 <p class="team-tag">4零丨</p>
                 <p class="team-desc">Premier competitive team with multiple Tier 1 victories.</p>
             </div>
             <div class="team-card">
                 <div class="tier-badge red-bg">TIER 2</div>
-                <i class="fas fa-bolt team-icon"></i>
+                <i class="fas fa-bolt" style="font-size:2.2rem; color:var(--gold); margin:1rem 0;"></i>
                 <h3 class="team-name">STORM TROOPERS</h3>
                 <p class="team-tag">4零丨</p>
                 <p class="team-desc">Aggressive playstyle specialists known for overwhelming opponents.</p>
             </div>
-            <div class="team-card">
-                <div class="tier-badge pink-bg">ALL-FEMALE</div>
-                <i class="fas fa-heart team-icon"></i>
-                <h3 class="team-name">LADYBUGS</h3>
-                <p class="team-tag">4零丨</p>
-                <p class="team-desc">Elite female competitors proving skill knows no gender.</p>
-            </div>
-            <div class="team-card">
-                <div class="tier-badge purple-bg">MP SPECIALISTS</div>
-                <i class="fas fa-gamepad team-icon"></i>
-                <h3 class="team-name">4KT SYNDICATE</h3>
-                <p class="team-tag">4零丨</p>
-                <p class="team-desc">Multiplayer domination experts. Masters of clutch gameplay.</p>
-            </div>
         </div>
+
+        <section class="recruitment-section">
+            <h2>ENTER THE KINGDOM</h2>
+            <p>Ready to represent Blood Esports on the global stage? Apply now to join our elite rosters.</p>
+            <a href="https://discord.gg/99uuMvMBX" class="btn-apply">APPLY NOW</a>
+        </section>
     </section>
 
-    <footer class="footer">
-        <p class="footer-text">ALL RIGHTS RESERVED BLOOD ESPORTS 2026</p>
+    <footer style="text-align: center; padding: 3rem 1.5rem; border-top: 1px solid #222;">
+        <p style="font-family: 'Orbitron'; font-size: 0.7rem; color: #555; letter-spacing: 2px;">ALL RIGHTS RESERVED BLOOD ESPORTS 2026</p>
     </footer>
 
 </body>
